fix: template message reset pass

--- a/backend/src/views/index.handlebars
+++ b/backend/src/views/index.handlebars
@@ -5,7 +5,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
+
 <body>
-  
+  <p>
+    You are receiving this because you (or someone else) requested the reset of the 'orinonia' npm user account.
+    
+    Please click on the following link, or paste this into your browser to complete the process:
+    
+    <a href="http://localhost:3333/verify/{{token}}">
+      
+    </a>
+
+    If you received this in error, you can safely ignore it.
+    
+    You can reply to this message, or email support@npmjs.com if you have questions.
+    
+    npm loves you.
+  </p>
 </body>
 </html>
